# agents

./: README.md  docker-compose.yaml  docker-compose.yml  langgraph.json  output.json  pyproject.old  pyproject.toml  updater.ipynb
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
accounts/: agent.py
chain/: agent.py
coding/: GEMINI.md  Makefile  evals.md  gem.py  gemini  pyproject.toml  raw_traces.json  run.py  starter_pack_README.md  starter_pack_pyproject.toml
coding/.backup_coding_20251020_133110/: download_traces.py  jokes.json  pyproject.toml  run.py  test.py
coding/.backup_coding_20251020_133110/calculator/: agent.py
coding/.backup_coding_20251020_133110/coding_agent/: agent.py
coding/.backup_coding_20251020_133110/joke_agent/: agent.py
coding/.cloudbuild/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
coding/calculator/: agent.py  agent_engine_app.py
coding/calculator/utils/: deployment.py  tracing.py  typing.py
coding/cli/: script.py
coding/coding_agent/: agent.py
coding/deployment/terraform/: build_triggers.tf  variables.tf
coding/joke_agent/: agent.py  evalsetcaffbd.evalset.json  prompt.py
coding/tests/integration/: test_agent.py  test_agent_engine_app.py
distributed/: doesnot.json  main.py  pyproject.toml  search_server.py  test.py  work.json
distributed/main/: agent.py
distributed/remote/: coding.py
distributed/remote/coding/: agent.py  prompt.py  server.py
distributed/remote/main/: agent.py
distributed/search/: agent.py
news/: .env.example  .gitignore  CLAUDE.md  QUICKSTART.md  README.md  example.py  pyproject.toml  test_agent_syntax.py
news/research/: __init__.py  agent.py
notebooks/: accounts.ipynb  chain.ipynb  design.ipynb  planner prompt.ipynb  updater.ipynb  utils.py
run/: Dockerfile
ui/: CLAUDE.md  plan.md
ui/backend/: pyproject.toml
ui/backend/proverbs/: agent.py  ui.py
ui/frontend/: package.json
ui/frontend/app/: layout.tsx  page.tsx
updater/: collect.py  utils.py
(+4 files in other folders)
