[tool.poetry]
name = "agents"
packages = [
    { include = "accounts" }
    ]
version = "0.1.0"
description = "Experimentations with agents on Langgraph"
authors = ["Boris Tvaroska <boris@tvaroska.sk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
langgraph = "^0.2.60"
langchain-google-vertexai = "^2.0.9"
langchain-community = "^0.3.13"
numpy = "<2.0.0"
grpcio = "1.67.1"


[tool.poetry.group.dev.dependencies]
langgraph-cli = "^0.1.65"
jupyterlab = "^4.3.4"
langgraph-sdk = "^0.1.48"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
