[project]
name = "agents"
version = "0.1.0"
description = "Experimentations with agents on Langgraph"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "langchain-community>=0.3.27",
    "langchain-google-vertexai>=2.0.27",
    "langgraph>=0.5.0,<0.6.0",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.4",
    "langgraph-cli[inmem]>=0.3.3",
]

[tool.setuptools]
py-modules = ['accounts']

[tool.uv.workspace]
members = [
    "coding",
]
